<resources>
    <string name="app_name">GoodCountry</string>
    <string name="home">首页</string>
    <string name="community">社区</string>
    <string name="shopping">商城</string>
    <string name="mine">我的</string>
    <string name="release">发布</string>
    <string name="Disease_knowledge">疾病知识</string>
    <string name="experience">病友经验</string>
    <string name="opinion">专家观点</string>
    <string name="more">更多</string>
    <string name="search">搜索</string>
    <string name="more_shop">更多商城信息</string>
    <string name="hotel">酒店</string>
    <string name="daizhen">代诊</string>
    <string name="city">北京</string>
    <string name="my_card">我的名片</string>
    <string name="balance">钱包余额：</string>
    <string name="input_name">请输入姓名（必填）</string>
    <string name="input_num">请输入手机号（必填）</string>
    <string name="input_disease">请选择疾病（必填）</string>
    <string name="input_verify_num">请输入验证码</string>
    <string name="input_area">请输入所在区域</string>
    <string name="input_hospital">请输入医院名称</string>
    <string name="select_flag">选择标签</string>
    <string name="submit">提交</string>
    <string name="doctor_authentication">医生认证</string>
    <string name="patient_authentication">患者认证</string>
    <string name="patient_name">患者姓名</string>
    <string name="num">手机号</string>
    <string name="verify_num">验证码</string>
    <string name="hospital_tv">所在医院</string>
    <string name="area_tv">选择区域</string>
    <string name="disease">所患疾病</string>
    <string name="back">返回</string>
    <string name="doctor_name">医生姓名</string>
    <string name="img_tv">上传工作证/带胸牌照片</string>
    <string name="get_verify">获取验证码</string>
    <string name="case_manage">病案管理</string>
    <string name="article_manage">文章管理</string>
    <string name="my_order">我的订单</string>
    <string name="go_shop">去商场看看</string>
    <string name="my_coupon">我的优惠券</string>
    <string name="invication">好友邀请</string>
    <string name="height">身高</string>
    <string name="weight">体重</string>
    <string name="disease_flag">疾病标签</string>
    <string name="treat_case">治疗病例</string>
    <string name="add_case">添加病例</string>
    <string name="upload_extra">上传电子病例附件</string>
    <string name="history">治疗方案及病例</string>
    <string name="sure_add">确认添加</string>

    <string name="my_article">我的文章</string>
    <string name="article_collection">我的收藏</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comment_info">评论信息</string>
    <string name="reply">回复</string>
    <string name="report">举报</string>
    <string name="reward">奖励</string>
    <string name="input_content">请输入内容</string>
    <string name="select_article">选择文章</string>
    <string name="shop_detail">商品详情</string>
    <string name="shop_car">购物车</string>
    <string name="zero">0</string>
    <string name="total_pay">合计支付</string>
    <string name="money_pay">人民币账户支付</string>
    <string name="coin_pay">好人币钱包支付</string>
    <string name="wechat_pay">微信支付</string>
    <string name="alipay">支付宝支付</string>
    <string name="add_car">加入购物车</string>
    <string name="buy_now">立即购买/兑换</string>
    <string name="example">xxxxx</string>
    <string name="price">1111</string>
    <string name="sold">已售：%d</string>
    <string name="wallet_coin_sum">你钱包中目前共有%d币</string>
    <string name="car_sum">共%d件商品 合计：%d元或%d币</string>
    <string name="settlement">结算</string>
    <string name="_100">100%</string>
    <string name="secondget">%d秒后可重新获取验证码</string>
    <string name="sure_order">确认订单</string>
    <string name="sure_pay">确认支付</string>
    <string name="need_pay">%d元+%d币</string>
    <string name="money">%d元</string>
    <string name="coin">%d币</string>
    <string name="pay_loading">支付中，请稍候。。。</string>
    <string name="pay_done">支付成功</string>
    <string name="pay_done1">请在“我的订单”页面查看详情</string>
    <string name="sure">确定</string>
    <string name="current_location">当前定位</string>
    <string name="history_location">历史记录</string>
    <string name="hot_city">热门城市</string>
    <string name="release_article">发表文章</string>
    <string name="release_issue">问题悬赏</string>
    <string name="issue_coin">问题悬赏</string>
    <string name="share_article">分享文章</string>
    <string name="title">标题</string>
    <string name="content">内容</string>
    <string name="input_title">请输入工单标题</string>
    <string name="input_issue_coin">请输入悬赏币</string>
    <string name="select_type">选择类型</string>
    <string name="select_case">选择病例</string>
    <string name="add_img">添加图片</string>
    <string name="cancel">取消</string>
    <string name="other">其他</string>
    <string name="__100">100</string>
    <string name="_0">0</string>
    <string name="modify_buy_num">修改购买数量</string>
    <string name="reward_coin">奖励：%d币</string>
    <string name="go_home">返回首页看看</string>
    <string name="authentication_success">认证成功</string>
    <string name="release_now">立即发布</string>
    <string name="no_record">暂无文章发布记录~</string>
    <string name="select_disease">选择病例</string>
    <string name="all_article">全部文章</string>
    <string name="head">头像</string>
    <string name="check">check</string>
    <string name="room_type">房间类型</string>
    <string name="room_time">入住时间</string>
    <string name="room_num">房间数</string>
    <string name="level1">一级好友</string>
    <string name="level2">二级好友</string>
    <string name="level3">三级好友</string>
    <string name="total_in">总共收入%d币</string>
    <string name="no_data">暂无数据</string>
    <string name="loading">数据加载中，请稍候。。。</string>
    <string name="error_net">网络错误</string>

</resources>
