<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="@dimen/dp_10"
    tools:context=".activity.AuthenticationDoctorActivity">

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:contentDescription="@string/back"
        android:src="@drawable/left_black"
        app:layout_constraintBottom_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/title" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:text="@string/doctor_authentication"
        android:textSize="@dimen/sp_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/name_tv"
        android:layout_width="@dimen/dp_80"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/doctor_name"
        android:textSize="@dimen/sp_18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:background="@android:color/transparent"
        android:hint="@string/input_name"
        android:inputType="text"
        android:textSize="@dimen/sp_18"
        app:layout_constraintBottom_toBottomOf="@id/name_tv"
        app:layout_constraintStart_toEndOf="@id/name_tv"
        app:layout_constraintTop_toTopOf="@id/name_tv" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/name_tv" />

    <TextView
        android:id="@+id/num_tv"
        android:layout_width="@dimen/dp_80"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/num"
        android:textSize="@dimen/sp_18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view1" />

    <EditText
        android:id="@+id/num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:background="@android:color/transparent"
        android:hint="@string/input_num"
        android:inputType="number"
        android:maxLength="11"
        android:textSize="@dimen/sp_18"
        app:layout_constraintBottom_toBottomOf="@id/num_tv"
        app:layout_constraintStart_toEndOf="@id/num_tv"
        app:layout_constraintTop_toTopOf="@id/num_tv" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/num_tv" />

    <TextView
        android:id="@+id/verify_tv"
        android:layout_width="@dimen/dp_80"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/verify_num"
        android:textSize="@dimen/sp_18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view2" />

    <EditText
        android:id="@+id/verify"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:background="@android:color/transparent"
        android:gravity="start"
        android:hint="@string/input_verify_num"
        android:maxLength="6"
        android:inputType="number|textMultiLine"
        android:textSize="@dimen/sp_18"
        app:layout_constraintBottom_toBottomOf="@id/verify_tv"
        app:layout_constraintStart_toEndOf="@id/verify_tv"
        app:layout_constraintTop_toTopOf="@id/verify_tv" />

    <View
        android:id="@+id/view0"
        android:layout_width="@dimen/dp_2"
        android:layout_height="@dimen/dp_15"
        android:layout_marginStart="@dimen/dp_5"
        android:background="@color/gray"
        app:layout_constraintBottom_toBottomOf="@id/verify_tv"
        app:layout_constraintStart_toEndOf="@id/verify"
        app:layout_constraintTop_toTopOf="@id/verify_tv" />

    <TextView
        android:id="@+id/get_verify"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_5"
        android:gravity="start"
        android:text="@string/get_verify"
        android:inputType="textMultiLine"
        android:textColor="@android:color/holo_green_light"
        app:layout_constraintBottom_toBottomOf="@id/verify_tv"
        app:layout_constraintStart_toEndOf="@id/view0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/verify_tv" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/verify_tv" />

    <TextView
        android:id="@+id/area_tv"
        android:layout_width="@dimen/dp_80"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/area_tv"
        android:textSize="@dimen/sp_18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view3" />

    <EditText
        android:id="@+id/area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:background="@android:color/transparent"
        android:hint="@string/input_area"
        android:inputType="text"
        android:textSize="@dimen/sp_18"
        app:layout_constraintBottom_toBottomOf="@id/area_tv"
        app:layout_constraintStart_toEndOf="@id/area_tv"
        app:layout_constraintTop_toTopOf="@id/area_tv" />

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/area_tv" />

    <TextView
        android:id="@+id/hospital_tv"
        android:layout_width="@dimen/dp_80"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/hospital_tv"
        android:textSize="@dimen/sp_18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view4" />

    <EditText
        android:id="@+id/hospital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:background="@android:color/transparent"
        android:hint="@string/input_hospital"
        android:inputType="text"
        android:textSize="@dimen/sp_18"
        app:layout_constraintBottom_toBottomOf="@id/hospital_tv"
        app:layout_constraintStart_toEndOf="@id/hospital_tv"
        app:layout_constraintTop_toTopOf="@id/hospital_tv" />

    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/hospital_tv" />

    <TextView
        android:id="@+id/img_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/img_tv"
        android:textSize="@dimen/sp_18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view5" />

    <ImageView
        android:id="@+id/img"
        android:layout_width="@dimen/dp_90"
        android:layout_height="@dimen/dp_90"
        android:layout_marginStart="@dimen/dp_10"
        android:src="@mipmap/img_shangchuan_zhj"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_tv" />

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_light"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img" />
</android.support.constraint.ConstraintLayout>