<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/holo_blue_light"
    android:divider="@mipmap/u1204"
    android:dividerPadding="@dimen/dp_6"
    android:gravity="center"
    android:orientation="vertical"
    android:showDividers="beginning|middle|end">

    <TextView
        android:id="@+id/reply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_20"
        android:gravity="center"
        android:text="@string/reply" />

    <TextView
        android:id="@+id/report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/report" />

    <TextView
        android:id="@+id/reward"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/reward" />
</LinearLayout>